bin_PROGRAMS = fah

fah_SOURCES = src/fah-ws.c lib/libwebsockets/base64-decode.c \
                 lib/libwebsocketshandshake.c lib/libwebsockets/client-handshake.c \
                 lib/libwebsockets/libwebsockets.c lib/libwebsockets/extension-deflate-stream.c lib/libwebsockets/md5.c \
                 lib/libwebsockets/extension-x-google-mux.c lib/libwebsockets/parsers.c \
                 lib/libwebsockets/extension.c lib/libwebsockets/sha-1.c
